--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -207,7 +207,7 @@ input, select, textarea {
 	}
 
 	h4 {
-		font-size: 1.1em;
+		font-size: 1.15em;
 	}
 
 	h5 {
@@ -216,6 +216,10 @@ input, select, textarea {
 
 	h6 {
 		font-size: 0.7em;
+	}
+
+	.br1 {
+		line-height: 2em;
 	}
 
 	@media screen and (max-width: 736px) {
