--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2946,7 +2946,7 @@ input, select, textarea {
 			-webkit-flex-direction: row;
 			-ms-flex-direction: row;
 			flex-direction: row;
-			background-color: #2e3450;
+			/* background-color: #2e3450; */
 		}
 
 			.spotlights > section > .image {
@@ -2965,7 +2965,7 @@ input, select, textarea {
 				}
 
 				.spotlights > section > .image:before {
-					background: rgba(36, 41, 67, 0.9);
+					/* background: rgba(36, 41, 67, 0.9); */
 					content: '';
 					display: block;
 					height: 100%;
