--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3388,8 +3388,7 @@ input, select, textarea {
 		-webkit-align-items: center;
 		-ms-align-items: center;
 		align-items: center;
-		/* background: url("../../images/banner.jpg"); */
-		background-color: black;
+		/* background-image: url("../../images/banner.jpg"); */
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
@@ -3424,12 +3423,11 @@ input, select, textarea {
 			display: block;
 			height: 100%;
 			left: 0;
-			opacity: 0;
+			opacity: 0.85;
 			position: absolute;
 			top: 0;
 			width: 100%;
 			z-index: 1;
-			/* background-color: black; */
 		}
 
 		#banner h1 {
