--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3388,7 +3388,7 @@ input, select, textarea {
 		-webkit-align-items: center;
 		-ms-align-items: center;
 		align-items: center;
-		/* background-image: url("../../images/banner.jpg"); */
+		background-image: url("../../images/banner_gai.png");
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
