--- a/hackathonGame/style.css
+++ b/hackathonGame/style.css
@@ -1,12 +1,12 @@
 .container44 {
-    width: 530px;
+    width: 33em;
     margin-left: 30px;
     margin-bottom: 100px;
     margin-right: 150px;
 }
 
 .container33 {
-    width: 400px;
+    width: 24.8em;
     margin-left: 10px;
     margin-bottom: 100px;
     margin-right: 100px;
@@ -41,7 +41,7 @@
     width: 250px;
     height: 36px;
     background-color: #0E0B16;
-    position: absolute; top: 50px; left: 720px;
+    position: absolute; top: 50px; left: 44.88em;
     text-align:center;
     line-height: 12;
 }
