--- a/hackathonGame/style.css
+++ b/hackathonGame/style.css
@@ -12,15 +12,20 @@
 }
 
 
-#Box2,#Box3,#Box4,#Box5,#Box6,#Box7,#Box8,#Box9,#Box10,#Box11,#Box12,#Box13,#Box14,#Box15,#Box16,#Box1,#Box18,#Box19,#Box20,#Box21,#Box22,#Box23,#Box24,#Box25,#Box26{
+#Box1,#Box2,#Box3,#Box4,#Box5,#Box6,#Box7,#Box8,#Box9,#Box10,#Box11,#Box12,#Box13,#Box14,#Box15,#Box16,#Box18,#Box19,#Box20,#Box21,#Box22,#Box23,#Box24,#Box25,#Box26{
     width:120px;
     height:120px;
     padding:10px;
     border:1px #ccc dashed;
     float:left;
     margin:5px;
+    background-color: #D2E9FF;
 }
 
+.timu{
+    width:100px;
+    height:100px;
+}
 /* #circle{
     width: 80px;
     height: 80px;
@@ -67,7 +72,7 @@
     /* border:5px #ccc solid; */
     position: relative;
     position: absolute; top: 50%;; left: 50%;
-    margin-top: -170px;
+    margin-top: -150px;
     margin-left: -550px;
 
 }
@@ -87,8 +92,14 @@
 
 .game{
     height: 800px;
+    margin-top: 20px;
+    margin-bottom: 30px;
 }
 
 .content{
     position: relative;
+}
+
+.p{
+    margin-left: 30px;
 }
