--- a/BB84/main.css
+++ b/BB84/main.css
@@ -32,6 +32,9 @@ h1{
     left: 0;
     min-width: 100%;
     min-height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    
 }
 
 #playerAlice{
