--- a/BB84/main.css
+++ b/BB84/main.css
@@ -3,6 +3,11 @@
     to {opacity: 0;}
 }
 
+@keyframes change-opacity01{
+    from {opacity: 0.5;}
+    to {opacity: 1;}
+}
+
 body{
     margin: 0;
 }
@@ -30,34 +35,41 @@ h1{
     position: fixed;
     top: 0;
     left: 0;
-    min-width: 100%;
-    min-height: 100%;
     max-width: 100%;
-    max-height: 100%;
     
 }
 
 #playerAlice{
-    height: 120px;
+    height: 100px;
     position: absolute;
     top: 58%;
-    left: 17%;
+    left: 18%;
     transform: translate(-50%, -50%);    
     /* z-index: 1; */
 }
 
 #playerBob{
-    height: 120px;
+    height: 100px;
     position: absolute;
     top: 73%;
-    left: 17%;
+    left: 18%;
     transform: translate(-50%, -50%);    
 }
 
 #playerHack{
-    height: 120px;
+    height: 100px;
     position: absolute;
     top: 88%;
-    left: 17%;
+    left: 18%;
     transform: translate(-50%, -50%);    
+}
+
+.zhuanchang{
+    position: fixed;
+    top: 0;
+    left: 0;
+    max-width: 100%;  
+    animation-name: change-opacity01;
+    animation-duration: 3s;
+    animation-iteration-count: 1;
 }
